src/Weather.css
.Weather {
  background: rgb(45, 175, 253);
  background: linear-gradient(
    204deg,
    rgba(45, 175, 253, 1) 0%,
    rgba(45, 253, 218, 1) 100%
  );

  border: 2px solid #38a3a5;
  border-radius: 4px;
  box-shadow: 2px 2px 5px;
  font-family: 'Poppins', sans-serif;
  padding: 20px;
  opacity: 0.85;
}

.Weather canvas {
  display: inline-block;
  margin: 10px 10px;
  vertical-align: middle;
}

.Weather h1 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  text-shadow: 1px 1px 3px;
}

.Weather .form-control {
  background-color: #d4e3e4;
  border: 2px solid #38a3a5;
}

.Weather .btn-branding {
  background-color: #2e446a;
  color: #d4e3e4;
  border-radius: 4px;
  transition: all 150ms ease-in-out;
}

.Weather .btn-branding:hover {
  border: 2px solid #2e446a;
  background-color: #d4e3e4;
  color: #2e446a;
}

.Weather .temperature {
  font-size: 48px;
  font-weight: bold;
  line-height: 68px;
  display: inline-block;
  vertical-align: middle;
  padding-left: 5px;
}

.Weather .unit {
  font-size: 18px;
  font-weight: bold;
  line-height: 24px;
  position: relative;
  top: -10px;
}

.Weather .unit a {
  text-decoration: none;
}

.Weather .unit a:hover {
  text-decoration: underline;
}

.Weather ul {
  padding: 0;
  margin-top: 10px;
}

.Weather li {
  list-style: none;
}

@media (max-width: 900px) {
  .Weather .btn-branding {
    font-size: smaller;
    padding-left: 4px;
  }

  .Weather .temperature {
    font-size: 44px;
    padding-left: 0;
  }

  .Weather .geo-button {
    padding-right: 5px;
  }
}

